--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\Scripts\BasicProjectile.cs" />
     <Compile Include="Assets\Scripts\RocketLauncher.cs" />
     <Compile Include="Assets\Scripts\PauseMenu.cs" />
+    <Compile Include="Assets\Scripts\PowerUpSounds.cs" />
     <Compile Include="Assets\Scripts\Perks (defunct).cs" />
     <Compile Include="Assets\Scripts\ShotgunPellet.cs" />
     <Compile Include="Assets\Scripts\Shotgun.cs" />
@@ -118,6 +119,7 @@
     <None Include="Assets\Addons\PeterLu_HologramShader\Documentation.txt" />
     <None Include="Assets\Addons\Ultimate 10 Plus Shaders\Shaders\Simple Sine Wave.shader" />
     <None Include="Assets\Addons\PeterLu_HologramShader\Shader\BaiscRim.shader" />
+    <None Include="Assets\Addons\FREE CASUAL PACK SFX\WELCOME_FREE CASUAL PACK SFX (README).txt" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
