Added a ton of shit
Added sounds for enemies death, added sound settings, added levels changing color, added dash cooldown bar, added collisions to enemy projectiles

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Assets\Scripts\HealthPack.cs" />
     <Compile Include="Assets\Scripts\MutatorSingleton.cs" />
     <Compile Include="Assets\Scripts\Spawner.cs" />
+    <Compile Include="Assets\Scripts\VolumeSettings.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Addons\Ultimate 10 Plus Shaders\Shaders\Edge Detection.shader" />
